# file-explorer-smruti

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  readme.md
include/: FileManager.h  UIManager.h
src/: FileManager.cpp  UIManager.cpp  main.cpp
